--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@fontsource/exo-2": "^5.2.8",
+    "@fontsource/geist-mono": "^5.2.7",
+    "@fontsource/noto-sans-sc": "^5.2.8",
     "astro": "^5.1.0",
     "clsx": "^2.1.1",
     "katex": "^0.16.27",
